- make a transaction linkable altough it is not for the complete amount of the invoice - show the type of transaction in a invoice detail

--- a/app/admin/template/financial/account/transaction/search_invoices.twig
+++ b/app/admin/template/financial/account/transaction/search_invoices.twig
@@ -33,7 +33,7 @@
 		{% endif %}
 		</td>
 		<td>
-			{% if (transaction.get_balance()|number_format(2) ==  invoice.get_price_incl()|number_format(2)) %}
+			{% if (transaction.get_balance() <=  invoice.get_price_incl()) %}
 				<a href="/financial/account/transaction?action=link_invoice&id={{ transaction.id }}&invoice_id={{ invoice.id }}">
 					<i class="fa fa-link"></i>
 				</a>
