--- a/app/admin/template/financial/account/transaction/search_invoices.twig
+++ b/app/admin/template/financial/account/transaction/search_invoices.twig
@@ -33,7 +33,7 @@
 		{% endif %}
 		</td>
 		<td>
-			{% if (transaction.get_balance() <=  invoice.get_price_incl()) or transaction.get_balance()|number_format == invoice.get_price_incl()|number_format %}
+			{% if transaction.get_balance() > 0 and invoice.get_balance() > 0 %}
 				<a href="/financial/account/transaction?action=link_invoice&id={{ transaction.id }}&invoice_id={{ invoice.id }}">
 					<i class="fa fa-link"></i>
 				</a>
