--- a/app/admin/template/sales/invoice/queue.twig
+++ b/app/admin/template/sales/invoice/queue.twig
@@ -76,6 +76,13 @@
 					</div>
 
 					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Send invoice" %}</label>
+						<div class="col-xs-9">
+							<input type="checkbox" data-group-cls="btn-group-xs" name="send_invoice" />
+						</div>
+					</div>
+
+					<div class="form-group">
 						<div class="col-xs-9 col-xs-offset-3">
 							<button type="submit" class="btn btn-primary">
 								{% trans "Create invoices" %}
