bugfix: saving modal customer contact selection without a change removes the customer_contact

--- a/app/admin/template/sales/invoice/queue/modal.customer_contacts.twig
+++ b/app/admin/template/sales/invoice/queue/modal.customer_contacts.twig
@@ -19,7 +19,7 @@
 			</div>
 		</div>
 	{% endfor %}
-	<input type="hidden" name="invoice_queue[customer_contact_id]" value="" id="customer_contact_id" />
+	<input type="hidden" name="invoice_queue[customer_contact_id]" value="{{ invoice_queue.customer_contact_id }}" id="customer_contact_id" />
 </div>
 </form>
 
