--- a/app/admin/template/sales/invoice/modal.transfer.twig
+++ b/app/admin/template/sales/invoice/modal.transfer.twig
@@ -3,7 +3,7 @@
 {% block header %}{% trans "Add New Payment" %}{% endblock header %}
 
 {% block body %}
-	<form class="form-horizontal" action="/administrative/invoice?action=edit&id={{ invoice.id }}" method="post">
+	<form class="form-horizontal" action="/sales/invoice?action=edit&id={{ invoice.id }}" method="post">
 		<div class="form-group">
 			<label class="control-label col-md-3">{% trans "Amount" %}</label>
 			<div class="col-md-9">
