permissions issue: - make 'financial' a permission in the role

--- a/app/admin/template/administrative/role.twig
+++ b/app/admin/template/administrative/role.twig
@@ -69,6 +69,8 @@
 										{% trans "Document management" %}
 									{% elseif permission.identifier == 'admin.setting' %}
 										{% trans "Settings" %}
+									{% elseif perission.identifier == 'admin.financial' %}
+										{% trans "Financial" %}
 									{% endif %}
 								</option>
 							{% endfor %}
