--- a/app/admin/template/_default/nav_bar.twig
+++ b/app/admin/template/_default/nav_bar.twig
@@ -75,6 +75,7 @@
 			</ul>
 			{% endif %}
 
+			{% if env.session.user.has_permission('admin.financial') %}
 			<ul class="nav navbar-nav">
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Financial" %} <b class="caret"></b></a>
@@ -83,6 +84,8 @@
 					</ul>
 				</li>
 			</ul>
+			{% endif %}
+
 			{% if env.session.user.has_permission('admin.setting') %}
 			<ul class="nav navbar-nav">
 				<li class="dropdown">
