--- a/app/admin/template/administrative/role.twig
+++ b/app/admin/template/administrative/role.twig
@@ -69,7 +69,7 @@
 										{% trans "Document management" %}
 									{% elseif permission.identifier == 'admin.setting' %}
 										{% trans "Settings" %}
-									{% elseif perission.identifier == 'admin.financial' %}
+									{% elseif permission.identifier == 'admin.financial' %}
 										{% trans "Financial" %}
 									{% endif %}
 								</option>
