Fix ogm length, remove debug string

--- a/app/admin/template/sales/invoice/queue.twig
+++ b/app/admin/template/sales/invoice/queue.twig
@@ -157,7 +157,7 @@
 						<label class="col-xs-3 control-label">{% trans "Invoice contact" %}</label>
 						<div class="col-xs-6">
 							<p class="form-control-static">
-								{{ invoice_queue.customer_contact.get_display_name() }}aze
+								{{ invoice_queue.customer_contact.get_display_name() }}
 								<a href="#change_customer_contact" data-toggle="modal">
 									{% trans "Change customer contact" %}
 								</a> /
