create option to pay invoices on expiration date

--- a/app/admin/template/administrative/document/invoice/pay.twig
+++ b/app/admin/template/administrative/document/invoice/pay.twig
@@ -71,6 +71,13 @@
 			</div>
 
 			<div class="form-group">
+				<label class="col-xs-3 control-label">{% trans "Pay on expiration date" %}</label>
+				<div class="col-xs-9">
+					<input type="checkbox" name="pay_on_expiration_date" data-group-cls="btn-group-xs" />
+				</div>
+			</div>
+
+			<div class="form-group">
 				<label class="col-xs-3 control-label">{% trans "Mark selected items as paid" %}</label>
 				<div class="col-xs-9">
 					<input type="checkbox" name="mark_paid" data-group-cls="btn-group-xs"  />
